--- a/main.css
+++ b/main.css
@@ -1,4 +1,9 @@
- html{
+/* *{
+    margin: 0;
+    padding:0;
+} */
+
+html{
         font-size: 22px;
     }
 
@@ -21,6 +26,7 @@ a{
     color: aqua;
     font-weight: 700;
     font-style:oblique;
+    margin: 0px;
 }
 p{
     color: rgb(148, 251, 255);
@@ -36,12 +42,20 @@ mark {
 }
 a{
     text-decoration:none;
+    margin-right: 32px;
 }
 p{
-    font-family: cursive;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: normal;
 }
 button{
     font-weight: 600;
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
+}
+header{
+    background-color: rgb(27, 9, 50);
+}
+footer{
+    text-align: center;
 }
