--- a/main.css
+++ b/main.css
@@ -14,10 +14,7 @@ html{
 b {
     color: antiquewhite;
 }
-button {
-    color: rgb(227, 227, 227);
-    background-color: #ff7484d7;
-}
+
 link{
     color: aqua;
     
@@ -48,11 +45,10 @@ p{
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: normal;
 }
-button{
-    font-weight: 600;
-    text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-}
+
+
+
+
 header{
     background-color: rgb(27, 9, 50);
 }
@@ -92,4 +88,14 @@ footer{
 
 .instagram-icon:hover {
   transform: scale(1.15);
+}
+button{
+    font-weight: 600;
+    text-transform: uppercase;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(227, 227, 227);
+    background-color: #ff7484d7;
+    font-size:medium;
+    width: 150px;
+    height: 50px;
 }
